syntax = "proto3";

package mughieams.evermosassessment.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "protobuf/api/common.proto";

option go_package = "github.com/mughieams/evermos-assessment/protobuf/api;commerce_api";

service OrderService {
  rpc CheckoutOrder(CheckoutOrderRequest) returns (MessageResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }

  rpc ConfirmOrder(OrderIDRequest) returns (MessageResponse) {
    option (google.api.http) = {post: "/v1/orders/{order_id}/confirm"};
  }

  rpc CancelOrder(OrderIDRequest) returns (MessageResponse) {
    option (google.api.http) = {post: "/v1/orders/{order_id}/cancel"};
  }
}

message CheckoutOrderRequest {
  int64 shop_id = 1;
  int64 warehouse_id = 2;
  int64 product_id = 3;
  int32 quantity = 4;
}

message OrderIDRequest {
  int64 order_id = 1;
}
